# sophie

./: .gitignore  .readthedocs.yaml  BUGS.md  CHANGELOG.md  LICENSE  README.md  setup.py
docs/: beginner.rst  color_spiral.sg  concurrent.rst  conf.py  contributing.rst  crosswalk.rst  csp.rst  ffi.rst  future.rst  goals.rst  index.rst  learn.rst  mechanics.rst  quick_start.rst  reasons.rst  reference.rst  requirements.txt  why_sophie.rst
docs/explain/: actor.rst  demand.rst  details.rst  foreign.rst  future.rst  goals.rst  index.rst  past.rst  reasons.rst  string.rst
docs/future/: game2.rst  index.rst  lifting.rst  nonlocal.rst  roles.rst
docs/howto/: index.rst  quick_start.rst
docs/ref/: ffi.rst  index.rst  list.rst  modules.rst  reference.rst  semantics.rst  stdlib.rst  string.rst  syntax.rst  types.rst
docs/tech/: action.rst  actor.rst  ast.rst  errors.rst  except.rst  gc.rst  generational.rst  graphics.rst  imports.rst  index.rst  lazy.rst  mechanics.rst  nanbox.rst  queue.rst  run_actor.rst  strict.rst  tree_walk.rst  type_checking.rst  vm.rst
docs/tutorial/: congrats.rst  first.rst  func.rst  game1.rst  game2.rst  if.rst  index.rst  list.rst  module.rst  seven.rst  sugar.rst  turtle.rst  type_safety.rst  wiifm.rst
examples/: Fibonacci.sg  Newton_3.sg  algorithm.sg  alias.sg  case-when.sg  case_when.sg  color_spiral.sg  define_functions.sg  explicit_list_construction.sg  guess_the_number.sg  hello_actors.sg  hello_world.sg  laziness.sg  library.sg  newton.sg  patron.sg  primes.sg  simple_designs.sg  some_arithmetic.sg  turtle.sg
examples/Advent of Code/: 2015 Day 01 Puzzle 1.sg  2015 Day 01 Puzzle 2.sg  2023 Day 01 Puzzle 1.sg  2023 Day 01 Puzzle 2.sg  2023 Day 02 Puzzle 1.sg  2023 Day 02 Puzzle 2.sg  2023 Day 02 common.sg  2023 Day 03 Puzzle 1.sg  2023 Day 03 Puzzle 2.sg  2023 Day 03 common.sg  2023 Day 04 Puzzle 1.sg  2023 Day 04 Puzzle 2.sg  2023 Day 04 common.sg  2023 Day 05 Puzzle 1.sg  2023 Day 05 Puzzle 2.sg  2023 Day 05 common.sg  2023 Day 06.sg  2023 Day 07 Puzzle 1.sg  2023 Day 07 Puzzle 2.sg  2023 Day 07 common.sg  2023 Day 08 Puzzle 1 alternate.sg  2023 Day 08 Puzzle 1.sg  2023 Day 08 Puzzle 2.sg  2023 Day 08 common.sg  2023 Day 08.sg  2023 Day 09 Puzzle 1.sg  2023 Day 09 Puzzle 2.sg  ReadMe.md  check_all.bat  common.sg  run_all.bat
examples/games/: 99 bottles.sg  bouncing_ball.sg  green.sg  guess_the_number.sg  mouse.sg  mouse_print.sg  nqp.sg
examples/mathematics/: Fibonacci.sg  Mandelbrot-graphical.sg  Mandelbrot.sg  Newton_2.sg  Newton_3.sg  factors.sg  primes.sg
examples/speculative/: complex.sg  guess_the_number.sg  mouse.sg  readme.md
examples/turtle/: color_spiral.sg  simple_designs.sg  turtle.sg
examples/tutorial/: alias.sg  generic_parameter.sg  library.sg  patron.sg  simple_calculations.sg  some_arithmetic.sg
sophie/: Sophie.md  __main__.py  algebra.py  calculus.py  cmdline.py  compiler.py  demand.py  diagnostics.py  environment.py  executive.py  experimental.py  forms.py  front_end.py  intermediate.py  location.py  manifest.py  modularity.py  ontology.py  partial_evaluator.py  preamble.py  preamble.sg  primitive.py  resolution.py  runtime.py  scheduler.py  simple_evaluator.py  space.py  stacking.py  syntax.py  turtle_adapter.py  type_algebra.py  type_evaluator.py  type_inference.py  unification.py  yarn.py
sophie/adapters/: for_test_purposes.py  fs_adapter.py  (+4 more)
tests/: test_dependency_pass.py  test_lab.py  test_smoke.py  test_zoo_of_fail.py  tests.py
vm/: CMakeLists.txt  CMakePresets.json  Thank You.txt
vm/Source/: actor.c  assembler.c  chacha.c  chacha.h  chunk.c  common.h  compiler.c  debug.c  debug.h  dispatch.c  ffi.c  function.c  game.c  gc.c  isa.c  main.c  memory.c  native.c  object.c  opcodes.h  parser.c  platform_specific.c  platform_specific.h  prep.h  record.c  scanner.c  string.c  table.c  value.c  vm.c
zoo/: README.md
zoo_of_fail/: bad_typecase_name.sg  mismatched_where.sg  readme.md  wrong_arity.sg
(+88 files in other folders)
